--- a/nobody-knows/src/assets/styles/index.scss
+++ b/nobody-knows/src/assets/styles/index.scss
@@ -1,5 +1,3 @@
-
-
 body {
   margin: 0;
   padding: 0;
@@ -24,4 +22,27 @@ code {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.homepage--container {
+  margin-top: 0;
+
+  height: 100vh;
+
+  background-image: url('https://zayland-assets.s3.amazonaws.com/images/blank_background.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.rotate {
+  transform-origin: center center;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+}
+
+div.menu-button {
+  display: block;
+  transition: all 0.4s ease-in-out;
 }
