--- a/nobody-knows/src/assets/styles/index.scss
+++ b/nobody-knows/src/assets/styles/index.scss
@@ -26,8 +26,8 @@ code {
 
 .homepage--container {
   margin-top: 0;
-
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
 
   background-image: url('https://zayland-assets.s3.amazonaws.com/images/blank_background.png');
   background-position: center;
@@ -45,4 +45,5 @@ code {
 div.menu-button {
   display: block;
   transition: all 0.4s ease-in-out;
+  line-height: 1.4;
 }
