--- a/nobody-knows-shop/src/index.css
+++ b/nobody-knows-shop/src/index.css
@@ -16,4 +16,18 @@ code {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 80px 1fr;
+  margin-top: 0;
+  min-height: 100vh;
+  height: 100%;
+  background: transparent;
+}
+.quantity-input {
+  border-style: none;
+}
+
+.cart-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 4rem 1fr 0.5fr;
+  height: 100vh;
 }
