--- a/nobody-knows/src/assets/styles/index.scss
+++ b/nobody-knows/src/assets/styles/index.scss
@@ -28,8 +28,16 @@ code {
   margin-top: 0;
   min-height: 100vh;
   height: 100%;
+}
 
+.nobody-knows-bg {
   background-image: url('https://zayland-assets.s3.amazonaws.com/images/blank_background.png');
+  background-position: center;
+  background-repeat: repeat;
+}
+
+.remixes-bg {
+  background-image: url('https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg');
   background-position: center;
   background-repeat: repeat;
 }
