--- a/ftwl/src/assets/styles/index.scss
+++ b/ftwl/src/assets/styles/index.scss
@@ -59,23 +59,53 @@ code {
 }
 
 .track-number {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  border: 1px solid white;
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid #f7ef79;
+  color: #f7ef79;
+}
+
+@media screen and (max-width: 30rem) {
+  .track-number {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+}
+
+.hover-bg-ftwl:hover {
+  background: #f7ef79;
+}
+.bg-ftwl {
+  background: #f7ef79;
+}
+
+.ts1 {
+  color: #f7ef79;
+  text-shadow: 1px 1px 2px black;
 }
 
 .nobody-knows-bg {
   background-color: yellow;
   background-image: url('https://zayland-assets.s3.amazonaws.com/images/blank_background.png');
   background-position: center;
-  background-repeat: repeat;
+
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .remixes-bg {
   background-image: url('https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg');
   background-position: center;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.ftwl-bg {
+  background-image: url('https://zayland-assets.s3.amazonaws.com/images/FTWL-BG-min.jpg');
+  // background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .rotate {
