--- a/nobody-knows/src/assets/styles/index.scss
+++ b/nobody-knows/src/assets/styles/index.scss
@@ -1,77 +1,86 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Helvetica', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-    'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
+	font-family: "Helvetica", -apple-system, BlinkMacSystemFont, "Segoe UI",
+		"Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+		"Helvetica Neue", sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 .landingpage--container {
-  margin-top: 0;
+	margin-top: 0;
 
-  height: 100vh;
+	height: 100vh;
 
-  background-image: url('https://zayland-assets.s3.amazonaws.com/images/background.png');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+	background-image: url("https://zayland-assets.s3.amazonaws.com/images/background.png");
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 
 .homepage--container {
-  margin-top: 0;
-  min-height: 100vh;
-  height: 100%;
+	margin-top: 0;
+	min-height: 100vh;
+	height: 100%;
 }
 
 .nobody-knows-bg {
-  background-image: url('https://zayland-assets.s3.amazonaws.com/images/blank_background.png');
-  background-position: center;
-  background-repeat: repeat;
+	background-image: url("https://zayland-assets.s3.amazonaws.com/images/blank_background.png");
+	background-position: center;
+	background-repeat: repeat;
 }
 
 .remixes-bg {
-  background-image: url('https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg');
-  background-position: center;
-  background-repeat: repeat;
+	background-image: url("https://zayland-assets.s3.amazonaws.com/images/BG-min.jpg");
+	background-position: center;
+	background-repeat: repeat;
 }
 
 .rotate {
-  transform-origin: center center;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
+	transform-origin: center center;
+	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
 }
 
 div.menu-button {
-  display: block;
-  transition: all 0.4s ease-in-out;
-  line-height: 1.4;
+	display: block;
+	transition: all 0.4s ease-in-out;
+	line-height: 1.4;
 }
 .bg-zay {
-  min-height: 100vh;
-  height: 100%;
+	min-height: 100vh;
+	height: 100%;
 
-  background-image: url('http://api.thumbr.it/whitenoise-361x370.png?');
-  background: #000000;
-  background-position: center;
-  background-repeat: repeat;
+	background-image: url("http://api.thumbr.it/whitenoise-361x370.png?");
+	background: #000000;
+	background-position: center;
+	background-repeat: repeat;
+}
+.bg-dallas-wave {
+	min-height: 100vh;
+	height: 100%;
+
+	background-image: url("../images/SITE\ BACKGROUND.jpg");
+	// background: #000000;
+	background-position: center;
+	background-repeat: repeat;
 }
 
 @media screen and (max-width: 30em) {
-  .player {
-    height: 50vmin;
-  }
+	.player {
+		height: 50vmin;
+	}
 }
 
 @media screen and (min-width: 60em) {
-  .player {
-    height: 50vmin;
-  }
+	.player {
+		height: 50vmin;
+	}
 }
