--- a/nobody-knows-shop/src/index.css
+++ b/nobody-knows-shop/src/index.css
@@ -1,33 +1,33 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 .home-grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 80px 1fr;
-  margin-top: 0;
-  min-height: 100vh;
-  height: 100%;
-  background: transparent;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 80px 1fr;
+	margin-top: 0;
+	min-height: 100vh;
+	height: 100%;
+	background: #57473d;
 }
 .quantity-input {
-  border-style: none;
+	border-style: none;
 }
 
 .cart-grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 4rem 1fr 0.5fr;
-  height: 100vh;
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 4rem 1fr 0.5fr;
+	height: 100vh;
 }
